# easytier-swift

./: .gitignore  .gitmodules  Makefile  Package.swift  README.md  README_EN.md
.github/workflows/: macos-app.yml
Packaging/: EasyTierMac.entitlements
Rust/EasyTierGuiFFI/: Cargo.toml
Rust/EasyTierGuiFFI/src/: lib.rs
Sources/CEasyTierFFI/: shim.c
Sources/CEasyTierFFI/include/: EasyTierFFI.h
Sources/EasyTierCore/: Exports.swift
Sources/EasyTierCore/Models/: AppMode.swift  NetworkModels.swift
Sources/EasyTierCore/Persistence/: AppStore.swift
Sources/EasyTierCore/Privilege/: PrivilegedEasyTierClient.swift  PrivilegedHelperTypes.swift
Sources/EasyTierCore/Runtime/: EasyTierCoreClient.swift  NetworkConfigTOMLCodec.swift  NetworkConfigValidator.swift  (+1 more)
Sources/EasyTierMac/: AppAppearanceSettings.swift  AppVersionInfo.swift  EasyTierApp.swift  LoginItemController.swift  SoftwareUpdateController.swift
Sources/EasyTierPrivilegedHelper/: Info.plist  main.swift
Sources/EasyTierRuntime/: StaticEasyTierFFIClient.swift
Sources/EasyTierShared/: EasyTierCoreClient.swift  NetworkConfigTOMLCodec.swift  NetworkConfigValidator.swift  NetworkSecretStore.swift  SearchQuery.swift  Updater.swift
Sources/EasyTierValidator/: main.swift
Tests/EasyTierCoreTests/: NetworkConfigTests.swift
Tests/EasyTierSharedTests/: EasyTierRPCTests.swift  NetworkConfigTests.swift  UpdaterTests.swift
designs/easytier-config-workbench/: network-workbench.html
scripts/: bootstrap.sh  build-ffi.sh  create-dmg.sh  dev-install-helper.sh  package-app.sh  test.sh  verify-app.sh
(+35 files in other folders)
