[package]
name = "easytier-gui-ffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[lib]
name = "easytier_ffi"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1"
dashmap = "6.0"
easytier = { path = "../../Vendor/EasyTier/easytier" }
once_cell = "1.18.0"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
url = "2"
uuid = "1.17.0"
